--- a/test/xe10/test.dproj
+++ b/test/xe10/test.dproj
@@ -8,7 +8,7 @@
         <Base>True</Base>
         <TargetedPlatforms>1</TargetedPlatforms>
         <AppType>Console</AppType>
-        <FrameworkType>None</FrameworkType>
+        <FrameworkType>VCL</FrameworkType>
         <Platform Condition="'$(Platform)'==''">Win32</Platform>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Config)'=='Base' or '$(Base)'!=''">
@@ -41,7 +41,7 @@
         <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
         <VerInfo_Release>3</VerInfo_Release>
         <Manifest_File>None</Manifest_File>
-        <DCC_Namespace>System;Xml;Data;Datasnap;Web;Soap;Winapi;DUnitX;VCL;$(DCC_Namespace)</DCC_Namespace>
+        <DCC_Namespace>System;Xml;Data;Datasnap;Web;Soap;Winapi;DUnitX;VCL;Vcl.Imaging;Vcl.Touch;Vcl.Samples;Vcl.Shell;$(DCC_Namespace)</DCC_Namespace>
         <VerInfo_Locale>11274</VerInfo_Locale>
         <VerInfo_Keys>CompanyName=;FileDescription=;FileVersion=1.2.3.4;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProductName=;ProductVersion=1.0.0.0;Comments=</VerInfo_Keys>
         <SanitizedProjectName>test</SanitizedProjectName>
@@ -82,9 +82,14 @@
         <DelphiCompile Include="$(MainSource)">
             <MainSource>MainSource</MainSource>
         </DelphiCompile>
-        <DCCReference Include="..\code\ooColor.RGB_test.pas"/>
-        <DCCReference Include="..\code\ooColor.RGB.Convert_test.pas"/>
-        <DCCReference Include="..\code\ooColor.RGB.Hexadecimal_test.pas"/>
+        <DCCReference Include="..\code\ooRGB_test.pas"/>
+        <DCCReference Include="..\code\ooRGBConvert_test.pas"/>
+        <DCCReference Include="..\code\ooRGBHexadecimal_test.pas"/>
+        <DCCReference Include="..\..\code\ooRGBConvert.pas"/>
+        <DCCReference Include="..\..\code\ooRGBGreyscale.pas"/>
+        <DCCReference Include="..\..\code\ooRGBHexadecimal.pas"/>
+        <DCCReference Include="..\..\code\ooRGB.pas"/>
+        <DCCReference Include="..\code\ooRGBGreyscale_test.pas"/>
         <BuildConfiguration Include="Debug">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
