--- a/test/xe10/test.dproj
+++ b/test/xe10/test.dproj
@@ -82,14 +82,14 @@
         <DelphiCompile Include="$(MainSource)">
             <MainSource>MainSource</MainSource>
         </DelphiCompile>
-        <DCCReference Include="..\code\ooRGB_test.pas"/>
-        <DCCReference Include="..\code\ooRGBConvert_test.pas"/>
-        <DCCReference Include="..\code\ooRGBHexadecimal_test.pas"/>
-        <DCCReference Include="..\..\code\ooRGBConvert.pas"/>
-        <DCCReference Include="..\..\code\ooRGBGreyscale.pas"/>
-        <DCCReference Include="..\..\code\ooRGBHexadecimal.pas"/>
-        <DCCReference Include="..\..\code\ooRGB.pas"/>
-        <DCCReference Include="..\code\ooRGBGreyscale_test.pas"/>
+        <DCCReference Include="..\code\RGB_test.pas"/>
+        <DCCReference Include="..\code\RGBConvert_test.pas"/>
+        <DCCReference Include="..\code\RGBHexadecimal_test.pas"/>
+        <DCCReference Include="..\..\code\RGBConvert.pas"/>
+        <DCCReference Include="..\..\code\RGBGreyscale.pas"/>
+        <DCCReference Include="..\..\code\RGBHexadecimal.pas"/>
+        <DCCReference Include="..\..\code\RGB.pas"/>
+        <DCCReference Include="..\code\RGBGreyscale_test.pas"/>
         <BuildConfiguration Include="Debug">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
